# todominal

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  my_db.db3
src/: args.rs  crud.rs  main.rs
