[package]
name = "todominal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.10", features = ["derive"] }
directories = "5.0.1"
rusqlite = { version = "0.30.0", features = ["bundled"] }
